exports[`Journey should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }>
    <View
      style={
        Object {
          "alignItems": "flex-start",
        }
      }>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "textAlign": "left",
                },
              ]
            }>
            NEXT CALL
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Object {
                  "color": "#f77040",
                  "fontSize": 18,
                },
              ]
            }>
            Schedule a call
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
    <View>
      <Image
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        source={1}
        style={undefined}
        testID={undefined} />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <View
      style={
        Object {
          "backgroundColor": "#eff2f2",
          "position": "absolute",
        }
      }
      uid="patterns">
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }>
        <Image
          source={1} />
        <Image
          source={1} />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }>
        <Image
          source={1} />
        <Image
          source={1} />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      uid="contentContainer">
      <ScrollView>
        <Image
          source={1}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 173,
              "justifyContent": "space-between",
              "resizeMode": "contain",
              "width": 375,
              "zIndex": 3,
            }
          }>
          <Image
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            source={1}
            style={
              Object {
                "height": 44,
                "marginLeft": 24,
                "marginRight": 24,
                "width": 44,
              }
            }
            testID={undefined} />
          <Image
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            source={1}
            style={
              Object {
                "height": 44,
                "marginLeft": 24,
                "marginRight": 24,
                "width": 44,
              }
            }
            testID={undefined} />
        </Image>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 4,
                "margin": 24,
                "marginTop": 12,
                "padding": 20,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                  },
                  Object {
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "marginBottom": 16,
                    "textAlign": "left",
                  },
                ]
              }>
              Hello 
              Rodger
              !
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                  },
                  Object {
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontSize": 18,
                    "marginBottom": 24,
                    "textAlign": "left",
                  },
                ]
              }>
              This is the start of something amazing! Your Mentor’s journey will be documented here.
            </Text>
            <TouchableNativeFeedback
              onPress={[Function]}>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 5,
                      "justifyContent": "center",
                      "marginHorizontal": 16,
                      "paddingBottom": 17,
                      "paddingTop": 15,
                    },
                    Object {
                      "backgroundColor": "#f77040",
                    },
                    Object {
                      "marginLeft": 0,
                      "marginRight": 0,
                    },
                    undefined,
                    undefined,
                  ]
                }>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#003035",
                        "fontFamily": "Brandon Text",
                      },
                      Object {
                        "fontSize": 13,
                        "textAlign": "center",
                      },
                      Array [
                        Object {
                          "fontFamily": "Brandon Text_bold",
                          "fontSize": 13,
                          "fontWeight": "bold",
                          "letterSpacing": 1,
                        },
                        Object {
                          "color": "#ffffff",
                        },
                        undefined,
                        undefined,
                      ],
                    ]
                  }>
                  LET’S GET STARTED
                </Text>
              </View>
            </TouchableNativeFeedback>
          </View>
        </View>
      </ScrollView>
    </View>
  </View>
</View>
`;

exports[`Journey should render the current scheduled call to be started 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }>
    <View
      style={
        Object {
          "alignItems": "flex-start",
        }
      }>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "textAlign": "left",
                },
              ]
            }>
            NEXT CALL
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Object {
                  "color": "#f77040",
                  "fontSize": 18,
                },
              ]
            }>
            Call your mentee
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
    <View>
      <Image
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        source={1}
        style={undefined}
        testID={undefined} />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <View
      style={
        Object {
          "backgroundColor": "#eff2f2",
          "position": "absolute",
        }
      }
      uid="patterns">
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }>
        <Image
          source={1} />
        <Image
          source={1} />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }>
        <Image
          source={1} />
        <Image
          source={1} />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      uid="contentContainer">
      <ScrollView>
        <Image
          source={1}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 173,
              "justifyContent": "space-between",
              "resizeMode": "contain",
              "width": 375,
              "zIndex": 3,
            }
          }>
          <Image
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            source={1}
            style={
              Object {
                "height": 44,
                "marginLeft": 24,
                "marginRight": 24,
                "width": 44,
              }
            }
            testID={undefined} />
          <Image
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            source={1}
            style={
              Object {
                "height": 44,
                "marginLeft": 24,
                "marginRight": 24,
                "width": 44,
              }
            }
            testID={undefined} />
        </Image>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 4,
                "margin": 24,
                "marginTop": 12,
                "padding": 20,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                  },
                  Object {
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "marginBottom": 16,
                    "textAlign": "left",
                  },
                ]
              }>
              Hello 
              Rodger
              !
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                  },
                  Object {
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontSize": 18,
                    "marginBottom": 24,
                    "textAlign": "left",
                  },
                ]
              }>
              This is the start of something amazing! Your Mentor’s journey will be documented here.
            </Text>
            <TouchableNativeFeedback
              onPress={[Function]}>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 5,
                      "justifyContent": "center",
                      "marginHorizontal": 16,
                      "paddingBottom": 17,
                      "paddingTop": 15,
                    },
                    Object {
                      "backgroundColor": "#f77040",
                    },
                    Object {
                      "marginLeft": 0,
                      "marginRight": 0,
                    },
                    undefined,
                    undefined,
                  ]
                }>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#003035",
                        "fontFamily": "Brandon Text",
                      },
                      Object {
                        "fontSize": 13,
                        "textAlign": "center",
                      },
                      Array [
                        Object {
                          "fontFamily": "Brandon Text_bold",
                          "fontSize": 13,
                          "fontWeight": "bold",
                          "letterSpacing": 1,
                        },
                        Object {
                          "color": "#ffffff",
                        },
                        undefined,
                        undefined,
                      ],
                    ]
                  }>
                  LET’S GET STARTED
                </Text>
              </View>
            </TouchableNativeFeedback>
          </View>
        </View>
      </ScrollView>
    </View>
  </View>
</View>
`;

exports[`Journey should render the next scheduled call 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }>
    <View
      style={
        Object {
          "alignItems": "flex-start",
        }
      }>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Object {
                  "color": "#9fb1b3",
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "textAlign": "left",
                },
              ]
            }>
            NEXT CALL
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "color": "#f77040",
                    "fontSize": 18,
                  },
                  Object {
                    "color": "#003035",
                  },
                ],
              ]
            }>
            Fri, Sep 16, 1:27pm
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
    <View>
      <Image
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        source={1}
        style={undefined}
        testID={undefined} />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <View
      style={
        Object {
          "backgroundColor": "#eff2f2",
          "position": "absolute",
        }
      }
      uid="patterns">
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }>
        <Image
          source={1} />
        <Image
          source={1} />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }>
        <Image
          source={1} />
        <Image
          source={1} />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      uid="contentContainer">
      <ScrollView>
        <Image
          source={1}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 173,
              "justifyContent": "space-between",
              "resizeMode": "contain",
              "width": 375,
              "zIndex": 3,
            }
          }>
          <Image
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            source={1}
            style={
              Object {
                "height": 44,
                "marginLeft": 24,
                "marginRight": 24,
                "width": 44,
              }
            }
            testID={undefined} />
          <Image
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            hitSlop={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            source={1}
            style={
              Object {
                "height": 44,
                "marginLeft": 24,
                "marginRight": 24,
                "width": 44,
              }
            }
            testID={undefined} />
        </Image>
        <View
          style={
            Object {
              "flex": 1,
            }
          }>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 4,
                "margin": 24,
                "marginTop": 12,
                "padding": 20,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                  },
                  Object {
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "marginBottom": 16,
                    "textAlign": "left",
                  },
                ]
              }>
              Hello 
              Rodger
              !
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#003035",
                    "fontFamily": "Brandon Text",
                  },
                  Object {
                    "fontSize": 13,
                    "textAlign": "center",
                  },
                  Object {
                    "fontSize": 18,
                    "marginBottom": 24,
                    "textAlign": "left",
                  },
                ]
              }>
              This is the start of something amazing! Your Mentor’s journey will be documented here.
            </Text>
            <TouchableNativeFeedback
              onPress={[Function]}>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderRadius": 5,
                      "justifyContent": "center",
                      "marginHorizontal": 16,
                      "paddingBottom": 17,
                      "paddingTop": 15,
                    },
                    Object {
                      "backgroundColor": "#f77040",
                    },
                    Object {
                      "marginLeft": 0,
                      "marginRight": 0,
                    },
                    undefined,
                    undefined,
                  ]
                }>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#003035",
                        "fontFamily": "Brandon Text",
                      },
                      Object {
                        "fontSize": 13,
                        "textAlign": "center",
                      },
                      Array [
                        Object {
                          "fontFamily": "Brandon Text_bold",
                          "fontSize": 13,
                          "fontWeight": "bold",
                          "letterSpacing": 1,
                        },
                        Object {
                          "color": "#ffffff",
                        },
                        undefined,
                        undefined,
                      ],
                    ]
                  }>
                  LET’S GET STARTED
                </Text>
              </View>
            </TouchableNativeFeedback>
          </View>
        </View>
      </ScrollView>
    </View>
  </View>
</View>
`;
